--- a/server/core/templates/change_list.html
+++ b/server/core/templates/change_list.html
@@ -1,6 +1,6 @@
 {%extends "admin/change_list.html"%} 
 {%load static%} 
 {%block content %} 
-<a href="upload-csv/">uplaoad a CSV file</a>
+<a href="upload-csv/" style="margin-left: 1%;">Upload a CSV file</a>
 {{block.super}}
 {%endblock%}
